# ISFP-Connct

./: .gitignore  connection_logger.py  dynamic_island.py  fsd_client.py  main.py  xplane_plugin_manager.py  xplane_tcp_client.py
plugins/xplane/: ISFPConnect.xpl
xplane-plugin/: CMakeLists.txt  log.txt
xplane-plugin/include/: isfp_plugin.h
xplane-plugin/src/: datarefs.cpp  network.cpp  plugin.cpp
